--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
   <section id = "background">
     <div class="heading">
       <div class="logoPos">
-        <img src="images/FoodLogo.png" alt="">
+        <img src="{{url_for('static',filename = 'images/FoodLogo.png')}}" alt="">
       </div>
       <h1 class="foodTitle">A Modern Food Recipe Generator</h1>
     </div>
