--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -1,6 +1,6 @@
 #background{
   height: 100vh;
-  background-image: url('images/burrito.jpg');
+  background-image: url('../images/burrito.jpg');
   /* background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), url('images/computer.jpg'); */
   background-size: cover;
   /* <------ */
